--- a/config/locale/ko/LC_MESSAGES/django.po
+++ b/config/locale/ko/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-18 20:54+0900\n"
+"POT-Creation-Date: 2022-02-26 00:49+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,78 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+#: apps/analysis/models.py:13
+msgid "emotion"
+msgstr "감정"
+
+#: apps/analysis/models.py:14
+msgid "emotion description"
+msgstr "감정 설명"
+
+#: apps/analysis/models.py:17 apps/analysis/models.py:43
+msgid "dog emotion"
+msgstr "강아지 감정"
+
+#: apps/analysis/models.py:24 apps/dogs/models.py:9
+msgid "dog name"
+msgstr "강아지 이름"
+
+#: apps/analysis/models.py:26
+msgid "dog age"
+msgstr "강아지 나이"
+
+#: apps/analysis/models.py:28
+msgid "analysis slug"
+msgstr "분석 Slug"
+
+#: apps/analysis/models.py:31 apps/dogs/models.py:14
+msgid "dog"
+msgstr "강아지"
+
+#: apps/analysis/models.py:37 apps/questions/models.py:21
+msgid "question choice"
+msgstr "질문 선택지"
+
+#: apps/analysis/models.py:41
+msgid "analysis image"
+msgstr "분석 이미지"
+
+#: apps/analysis/models.py:46
+msgid "dog emotion percentage"
+msgstr "강아지 감정 인식 퍼센트"
+
+#: apps/analysis/models.py:49
+msgid "dog coordinate"
+msgstr "강아지 감정 인식 좌표"
+
+#: apps/analysis/models.py:52
+msgid "human emotion"
+msgstr "사람 감정"
+
+#: apps/analysis/models.py:55
+msgid "human emotion percentage"
+msgstr "사람 감정 퍼센트"
+
+#: apps/analysis/models.py:58
+msgid "human coordinate"
+msgstr "사람 감정 인식 좌표"
+
+#: apps/analysis/models.py:62
+msgid "analysis is completed"
+msgstr "분석 완료 여부"
+
+#: apps/analysis/models.py:66
+msgid "analysis"
+msgstr "분석"
+
+#: apps/analysis/models.py:116
+msgid "memo"
+msgstr "메모"
+
+#: apps/analysis/models.py:119
+msgid "dog analysis record"
+msgstr "강아지 감정 기록"
+
 #: apps/core/models.py:12
 msgid "created at"
 msgstr "생성한 날짜"
@@ -26,6 +98,50 @@ msgstr "생성한 날짜"
 msgid "updated at"
 msgstr "수정한 날짜"
 
-#: config/settings/base.py:139
+#: apps/dogs/models.py:10
+msgid "date of birth"
+msgstr "생년월일"
+
+#: apps/dogs/models.py:11
+msgid "dog image"
+msgstr "강아지 사진"
+
+#: apps/questions/models.py:7 apps/questions/models.py:10
+msgid "question"
+msgstr "질문"
+
+#: apps/questions/models.py:16
+msgid "index"
+msgstr "순서"
+
+#: apps/questions/models.py:17
+msgid "question choice content"
+msgstr "질문 선택지 내용"
+
+#: apps/questions/models.py:18
+msgid "question choice solution"
+msgstr "질문 선택지 솔루션"
+
+#: apps/users/models.py:27
+msgid "email"
+msgstr "이메일"
+
+#: apps/users/models.py:28
+msgid "username"
+msgstr "사용자 이름"
+
+#: apps/users/models.py:29
+msgid "is_staff"
+msgstr "관리자 여부"
+
+#: apps/users/models.py:30
+msgid "is_active"
+msgstr "활성화 여부"
+
+#: apps/users/models.py:37
+msgid "user"
+msgstr "사용자"
+
+#: config/settings/base.py:149
 msgid "Korean"
 msgstr "한국어"
